--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 }
 .back{
    min-height: 100vh;
-   background-image: url(/images/back.jpg);
+   background-image: url(back.jpg);
    background-size: cover;
    background-repeat: repeat;
    background-position: center;
